--- a/AdventOfCode2016/nbproject/project.properties
+++ b/AdventOfCode2016/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/AdventOfCode2016.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.algs4.jar=C:\\Personal\\71100096\\Documents\\NetBeansProjects\\library\\algs4.jar
 file.reference.commons-lang3-3.5.jar=C:\\Personal\\71100096\\Documents\\NetBeansProjects\\library\\commons-lang3-3.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-lang3-3.5.jar}
+    ${file.reference.commons-lang3-3.5.jar}:\
+    ${file.reference.algs4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
