--- a/AdventOfCode2016/nbproject/project.properties
+++ b/AdventOfCode2016/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=AdventOfCode2016
+application.vendor=71100096
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,14 +27,19 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/AdventOfCode2016.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.algs4.jar=C:\\Personal\\71100096\\Documents\\NetBeansProjects\\library\\algs4.jar
 file.reference.commons-lang3-3.5.jar=C:\\Personal\\71100096\\Documents\\NetBeansProjects\\library\\commons-lang3-3.5.jar
+file.reference.guava-18.0.jar=C:\\Personal\\71100096\\Documents\\NetBeansProjects\\library\\guava-18.0.jar
+file.reference.trove-3.1a1.jar=C:\\Personal\\71100096\\Documents\\NetBeansProjects\\library\\trove-3.1a1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.commons-lang3-3.5.jar}:\
-    ${file.reference.algs4.jar}
+    ${file.reference.algs4.jar}:\
+    ${file.reference.guava-18.0.jar}:\
+    ${file.reference.trove-3.1a1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
