--- a/AdventOfCode2016/nbproject/project.properties
+++ b/AdventOfCode2016/nbproject/project.properties
@@ -31,7 +31,6 @@ endorsed.classpath=
 excludes=
 file.reference.algs4.jar=C:\\Personal\\71100096\\Documents\\NetBeansProjects\\library\\algs4.jar
 file.reference.commons-lang3-3.5.jar=C:\\Personal\\71100096\\Documents\\NetBeansProjects\\library\\commons-lang3-3.5.jar
-file.reference.FileIO.jar=C:\\Personal\\71100096\\Documents\\NetBeansProjects\\FileIO\\FileIO\\dist\\FileIO.jar
 file.reference.guava-18.0.jar=C:\\Personal\\71100096\\Documents\\NetBeansProjects\\library\\guava-18.0.jar
 file.reference.trove-3.1a1.jar=C:\\Personal\\71100096\\Documents\\NetBeansProjects\\library\\trove-3.1a1.jar
 includes=**
@@ -41,7 +40,7 @@ javac.classpath=\
     ${file.reference.algs4.jar}:\
     ${file.reference.guava-18.0.jar}:\
     ${file.reference.trove-3.1a1.jar}:\
-    ${file.reference.FileIO.jar}
+    ${reference.FileIO.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,6 +70,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.FileIO=../../FileIO/FileIO
+reference.FileIO.jar=${project.FileIO}/dist/FileIO.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
